<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/select_source"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/textViewCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/camera"
        android:padding="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/textViewGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:padding="16dp"
        android:paddingBottom="10dp"
        android:text="@string/gallery"
        android:textSize="16sp"/>
</LinearLayout>