<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_default_light_pressed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/btn_send_comment"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/lin"
                android:layout_marginTop="30dp"
                android:padding="16dp">

                <TextView
                    android:textStyle="bold"
                    android:text="@string/welcome_to_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/bg_comments"
                    android:id="@+id/textView36" />


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img_toolbar_logo"
                android:layout_below="@+id/lin"
                android:scaleType="fitCenter"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingBottom="20dp"
                android:id="@+id/imageView26"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <!--  <ScrollView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="18dp"
              android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp" >-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_fb"
                android:drawableLeft="@drawable/facebook"
                android:paddingLeft="16dp"
                android:textAllCaps="false"
                android:text="@string/connect_with_facebook"
                android:textColor="@color/bg_comments"
                android:textSize="16sp" />

           <!-- <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@drawable/button_fb"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                style="@style/FacebookLoginButton"
                android:padding="10dp"
                android:layout_marginTop="20dp" />-->

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_disabled"
                android:text="@string/sign_up"
                android:onClick="goFeed"
                android:textColor="@color/bg_comments"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="If already member "
                    android:textColor="@color/btn_default_shadow" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign in Here"
                    android:textColor="#18b195"
                    android:onClick="goLogin"/>
            </LinearLayout>

        </LinearLayout>

        <!--</ScrollView>-->
    </LinearLayout>

</RelativeLayout>
